force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <label>Warranty</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Warranty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>