force-app/main/default/objects/Warranty__c/fields/Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Date__c</fullName>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>