force-app/main/default/objects/Warranty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Purchased_Date__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>