force-app/main/default/objects/Warranty__c/listViews/Warranties_EU.listView-meta.xml
<ListView>
    <fullName>Warranties_EU</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Purchased_Date__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>B2C Insujet EU</value>
    </filters>
    <label>Warranties - EU</label>
</ListView>